@@ -84,7 +84,7 @@ td {
 .tty {
     font-family: "Courier New", Courier, monospace;
     margin: 0px 20px 0px 20px;
-    background-color: #FFFFee;
+    background-color: #FFFFe0;
     border: 1px solid #ddddaa;
     padding: 3px;
     font-size: 90%;
